// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PreupgradeReports should render error 1`] = `
<MessageBox
  icontype="error-circle-o"
  key="preupgrade-reports-error"
  msg="Could not retrieve data: Internal server error - Well, this is embarassing"
/>
`;

exports[`PreupgradeReports should render when loaded with reports 1`] = `
<LoadingState
  additionalClasses=""
  loading={false}
  loadingText="Loading"
  size="lg"
  timeout={300}
>
  <PreupgradeReports
    csrfToken="xyz"
    error={Object {}}
    getPreupgradeReports={[Function]}
    loading={false}
    newJobInvocationUrl="/job_invocations/new"
    preupgradeReports={
      Array [
        Object {
          "entries": Array [
            Object {
              "hostname": "host.example.com",
              "id": 42,
              "severity": "Too severe to talk about",
              "title": "Fix me!",
            },
            Object {
              "hostname": "host.example.com",
              "id": 43,
              "severity": "medium",
              "title": "I am broken too",
            },
          ],
          "hostId": 5,
        },
        Object {
          "entries": Array [
            Object {
              "hostname": "foo.example.com",
              "id": 44,
              "severity": "high",
              "title": "Octocat is not happy",
            },
            Object {
              "hostname": "foo.example.com",
              "id": 45,
              "severity": "low",
              "title": "Not enough credits",
            },
            Object {
              "hostname": "foo.example.com",
              "id": 46,
              "severity": "medium",
              "title": "SELinux is turned off",
            },
            Object {
              "hostname": "foo.example.com",
              "id": 47,
              "severity": "medium",
              "title": "Root password is too short",
            },
            Object {
              "hostname": "foo.example.com",
              "id": 49,
              "severity": "high",
              "title": "No chocolate chip cookies in cookie jar",
            },
          ],
          "hostId": 6,
        },
      ]
    }
    reportsExpected={true}
  />
</LoadingState>
`;

exports[`PreupgradeReports should render when loaded without reports 1`] = `
<LoadingState
  additionalClasses=""
  loading={false}
  loadingText="Loading"
  size="lg"
  timeout={300}
>
  <NoReports
    reportsExpected={true}
  />
</LoadingState>
`;

exports[`PreupgradeReports should render when loading 1`] = `
<LoadingState
  additionalClasses=""
  loading={true}
  loadingText="Loading"
  size="lg"
  timeout={300}
>
  <NoReports
    reportsExpected={false}
  />
</LoadingState>
`;
